<resources>
    <!-- App Details -->
    <string name="app_name">Secret Manager</string>

    <!-- Fragment Titles -->
    <string name="title_home">Texts</string>
    <string name="title_dashboard">Files</string>
    <string name="title_secrets">Secrets</string>
    <string name="title_settings">Settings</string>

    <!-- Buttons -->
    <string name="decrypt">DECRYPT</string>
    <string name="encrypt">ENCRYPT</string>
    <string name="open">OPEN</string>
    <string name="remove">REMOVE</string>
    <string name="copy_from_output">COPY FROM OUTPUT</string>
    <string name="pick_file">PICK FILE</string>

    <!-- Hints -->
    <string name="hint_input">Insert your input here</string>
    <string name="hint_output">Your processed text will be shown here</string>
    <string name="hint_password">Password</string>
    <string name="hint_store_secret">Alias for your secret</string>
    <string name="hint_long_click_qr">Long click on the QR image to open it in your browser.</string>

    <!-- Preferences -->
    <string name="preference_key_theme" translatable="false">preference_app_theme</string>
    <string name="preference_key_filename" translatable="false">preference_app_filenamme</string>
    <string name="preference_filename_default">secret_manager_file</string>
    <string name="preference_date_format_id" translatable="false">preferenceDateFormat</string>
    <string name="preference_date_format_title">Date Format</string>
    <string name="preference_help_id" translatable="false">preference_app_help</string>
    <string name="preference_save_qr_id" translatable="false">preference_save_qr_id</string>
    <string name="preference_auto_return_result_id" translatable="false">preference_auto_return_result_id</string>
    <string name="preference_qr_size_id" translatable="false">preference_qr_size_id</string>

    <string name="date_format_one" translatable="false">yyyy\/MM\/dd HH:mm</string>
    <string name="date_format_two" translatable="false">dd\/MM\/yyyy HH:mm</string>
    <string name="date_format_three" translatable="false">yyyy\/MM\/dd</string>
    <string name="date_format_four" translatable="false">dd\/MM\/yyyy</string>

    <string name="qr_size_150" translatable="false">150px</string>
    <string name="qr_size_300" translatable="false">300px</string>
    <string name="qr_size_600" translatable="false">600px</string>

    <!-- Preferences Fragment -->
    <string name="preference_section_execution">Execution Settings</string>
    <string name="preference_section_display">Display Settings</string>
    <string name="preference_section_help">Help</string>

    <string name="preference_save_qr_title">Auto Save QR</string>
    <string name="preference_save_qr_summary">Saves automatically the QR for the stored secrets in internal storage, in the App Picture folder (Android/data/es.miguelromeral.secretmanager/files/Pictures)</string>

    <string name="preference_filename_title">New file\'s name</string>
    <string name="preference_filename_summary">Default name for the new file processed</string>
    <string name="preference_filename_dialog">Set the file\'s name</string>

    <string name="preference_theme_title">Dark Theme</string>
    <string name="preference_theme_summary">Enable dark colors for the application.</string>

    <string name="preference_help_title">Frequent Questions and Answers</string>
    <string name="preference_help_summary">Take a look at how to use the application in its GitHub repository help page.</string>

    <string name="preference_auto_return_title">Always return results</string>
    <string name="preference_auto_return_summary">When you open the app from a text selected, if it\'s possible, replace the selected text with the execution output.</string>

    <string name="preference_qr_size_title">QR image size</string>
    <string name="preference_qr_size_summary">Get a QR image with this dimensions.</string>



    <!-- Text Execution -->
    <string name="secret_stored">Stored successfully under the alias \"%1$s\"</string>
    <string name="output_copied">Output copied to Clipboard</string>

    <!-- File Converter -->

    <!-- Secrets List -->
    <string name="secret_options_text" translatable="false">&#8942;</string>
    <string name="secret_list_empty">You must store secrets to seen them here.</string>
    <string name="store_secret_switch">Store Secret</string>
    <string name="list_open_secret">Open</string>
    <string name="list_delete_secret">Delete</string>
    <string name="list_get_qr_code">Get QR Code</string>
    <string name="option_output_to_input">Replace Input with Output</string>
    <string name="option_delete_input">Delete Input</string>
    <string name="option_output_to_clipboard">Copy Output to Clipboard</string>
    <string name="option_clear_secrets">Clear all secrets</string>
    <string name="option_export_secrets">Export secrets</string>
    <string name="option_import_secrets">Import secrets</string>
    <string name="option_search_secrets">Search</string>
    <string name="length_characters">Lenght: %1$d characters.</string>


    <!-- Import / Export Secrets -->
    <string name="exported_secrets_title">Secrets exported into App\'s file data folders</string>
    <string name="imported_secrets_title">Secrets imported into the App</string>
    <string name="open_file">OPEN FILE</string>
    <string name="explanation_file_permissions">In order to export your secrets, you\'ll need to allow the application to write the exported result in your device. Please, allow the permission required to use this feature</string>
    <string name="clear_secrets_title">Clear all secrets</string>
    <string name="clear_secrets_body">You\'re about to perform a full clear of the list of secrets stored on this device.\nTake into account this action can\'t be restored.\nAre you sure you want to clear all records?</string>
    <string name="clear_secrets_yes">Yes, delete</string>
    <string name="clear_secrets_no">Cancel</string>
    <string name="clear_secret_title">Remove secret</string>
    <string name="clear_secret_body">This action can\'t be restored.\nAre you sure you want to remove the secret with alias \"%1$s\"?</string>
    <string name="clear_secret_yes">Yes, delete</string>
    <string name="clear_secret_no">Cancel</string>

    <!-- Error messages -->
    <string name="error_decryption">Error while decryption</string>
    <string name="error_encryption">Error while encryption</string>
    <string name="error_mismatch_password">The password doesn\'t match with the file to be decrypted</string>
    <string name="error_wrong_encryption">There was a problem while encrypting your file. Please, try again later</string>
    <string name="ok_answer">OK</string>
    <string name="error_output_empty">Output is empty yet.</string>
    <string name="error_no_file_process">There\'s no file to process</string>
    <string name="error_empty_file">The file is empty.</string>
    <string name="error_unknown_file">Unknown File</string>
    <string name="error_unprovided_alias">You must provide an alias name to be stored.</string>
    <string name="error_max_file_size_title">File too large.</string>
    <string name="error_max_file_size">Unfortunately, the max size of file to be converted is %1$s. Please, choose another file.</string>
    <string name="error_file_size_not_allowed">Your file is %1$s, exceeding the size limit by %2$s.</string>
    <string name="error_file_not_created">The file couldn\'t be created.</string>

    <!-- Notifications -->
    <string name="channel_files_id" translatable="false">channel_id_files</string>
    <string name="channel_files_name">File Conversions Completed</string>
    <string name="channel_files_title">File Converted</string>
    <string name="channel_files_body_decrypted">File \"%1$s\" decrypted successfully!</string>
    <string name="channel_files_body_encrypted">File encrypted successfully!</string>
    <string name="channel_files_description">Shows a notification when the file conversion has been completed.</string>


    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>

    <!-- Without tags -->






</resources>
