<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Execution">

        <EditTextPreference
            android:key="@string/preference_key_filename"
            android:title="New file's name"
            android:summary="Default name for the new file processed"
            android:defaultValue="@string/preference_filename_default"
            android:dialogTitle="Set the file's name"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Display Settings">


        <SwitchPreferenceCompat
            android:key="@string/preference_key_theme"
            android:title="Dark Theme"
            android:summary="Enable dark colors for the application."/>


        <DropDownPreference
            android:key="@string/preference_date_format_id"
            android:title="@string/preference_date_format_title"
            android:entries="@array/date_format"
            android:summary="%s"
            android:entryValues="@array/date_format"/>

    </PreferenceCategory>



</PreferenceScreen>
