<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="es.miguelromeral.secretmanager.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="es.miguelromeral.secretmanager.ui.fragments.FileConverterFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_file_converter" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="es.miguelromeral.secretmanager.ui.fragments.SecretsFragment"
        android:label="@string/title_secrets"
        tools:layout="@layout/fragment_secrets" />
</navigation>